Details
-
Bug
-
Status: Resolved
-
P3
-
Resolution: Fixed
-
17, 18
-
b30
Backports
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8279811 | 19 | Vladimir Ivanov | P3 | Resolved | Fixed | b04 |
JDK-8279766 | 18.0.1 | Vladimir Ivanov | P3 | Resolved | Fixed | b02 |
JDK-8280774 | 17.0.4-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
JDK-8282821 | 17.0.4 | Martin Doerr | P3 | Resolved | Fixed | b01 |
Description
# Internal Error (/home/katya/work/JavaSE/Hotspot/ws/git/panama-vector/open/src/hotspot/share/prims/vectorSupport.cpp:173), pid=32306, tid=32328
# assert(payload->is_object()) failed: expected 'object' value for scalar-replaced boxed vector but got: NULL
#
# JRE version: Java(TM) SE Runtime Environment (17.0) (fastdebug build 17-internal+0-LTS-2021-04-15-2003590.katya...)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 17-internal+0-LTS-2021-04-15-2003590.katya..., compiled mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x18fa11f] VectorSupport::allocate_vector_payload(InstanceKlass*, frame*, RegisterMap*, ScopeValue*, Thread*)+0x30f
when running with DeoptimizeALot flag.
The failed list of tests:
jdk/incubator/vector/Byte128VectorTests.java
jdk/incubator/vector/Byte256VectorTests.java
jdk/incubator/vector/Byte64VectorTests.java
jdk/incubator/vector/DoubleMaxVectorTests.java
jdk/incubator/vector/Int128VectorTests.java
jdk/incubator/vector/Long256VectorTests.java
jdk/incubator/vector/Short256VectorTests.java
jdk/incubator/vector/Short64VectorTests.java
jdk/incubator/vector/ShortMaxVectorTests.java
To reproduce run on of above tests with "-Xcomp -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -XX:+DeoptimizeALot"
vectorIntrinsics contains the fix for
So this is new issue.
Attachments
Issue Links
- backported by
-
JDK-8279766 [vector] assert(payload->is_object()) failed: expected 'object' value for scalar-replaced boxed vector but got: NULL
-
- Resolved
-
-
JDK-8279811 [vector] assert(payload->is_object()) failed: expected 'object' value for scalar-replaced boxed vector but got: NULL
-
- Resolved
-
-
JDK-8280774 [vector] assert(payload->is_object()) failed: expected 'object' value for scalar-replaced boxed vector but got: NULL
-
- Resolved
-
-
JDK-8282821 [vector] assert(payload->is_object()) failed: expected 'object' value for scalar-replaced boxed vector but got: NULL
-
- Resolved
-
- duplicates
-
JDK-8278925 Some Vector API tests failed during deoptimization
-
- Closed
-
- relates to
-
JDK-8263125 During deoptimization vectors should reassign scalarized payload after all objects are reallocated.
-
- Resolved
-
- links to
-
Commit openjdk/jdk17u-dev/eee17fb7
-
Commit openjdk/jdk18/58b5fb32
-
Review openjdk/jdk17u-dev/202
-
Review openjdk/jdk18/76